--- a/crowd-voice-front-end-project/src/client/app/shared/sidebar/sidebar.html
+++ b/crowd-voice-front-end-project/src/client/app/shared/sidebar/sidebar.html
@@ -4,19 +4,19 @@
 <nav class="sidebar" [ngClass]="{sidebarPushRight: isActive}">
     <ul class="list-group">
         <a routerLink="/dashboard/home" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-fw fa-dashboard"></i> Dashboard
+            <i class="fa fa-fw fa-dashboard"></i> Home
         </a>
         <a [routerLink]="['chart']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-fw fa-bar-chart-o"></i> Charts
+            <i class="fa fa-fw fa-bar-chart-o"></i> All Projects
         </a>
         <a [routerLink]="['tables']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-fw fa-table"></i> Tables
+            <i class="fa fa-fw fa-table"></i> Trending Projects
         </a>
         <a [routerLink]="['forms']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-fw fa-edit"></i> Forms
+            <i class="fa fa-fw fa-edit"></i> Search Projects
         </a>
         <a [routerLink]="['element']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-fw fa-desktop"></i> Bootstrap Elements
+            <i class="fa fa-fw fa-desktop"></i> All Users
         </a>
         <a [routerLink]="['grid']" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-fw fa-wrench"></i> Bootstrap Grid
