--- a/crowd-voice-front-end-project/src/client/app/shared/topnav/topnav.html
+++ b/crowd-voice-front-end-project/src/client/app/shared/topnav/topnav.html
@@ -29,7 +29,7 @@
                     </li>
                     <li  class="dropdown nav-item" dropdown>
                         <a href="javascript:;" id="single-button" class="nav-link dropdown-toggle" dropdownToggle >
-                            <i class="fa fa-user"></i> John Smith <b class="caret"></b>
+                            <i class="fa fa-user"></i> {{currentUser.Name}} ({{currentUser.Username}}) <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="single-button">
                             <li>
@@ -43,7 +43,7 @@
                             </li>
                             <li class="divider"></li>
                             <li>
-                                <a class="dropdown-item" href="javascript:;" [routerLink]="['/logout']">
+                                <a class="dropdown-item" href="javascript:;" (click)="logOut()">
                                     <i class="fa fa-fw fa-power-off"></i> Log Out
                                 </a>
                             </li>
