--- a/crowd-voice-front-end-project/src/client/app/shared/topnav/topnav.html
+++ b/crowd-voice-front-end-project/src/client/app/shared/topnav/topnav.html
@@ -33,13 +33,10 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="single-button">
                             <li>
-                                <a class="dropdown-item" href="javascript:;"><i class="fa fa-fw fa-user"></i> Profile</a>
+                                <a class="dropdown-item" [routerLink]="['users/view', currentUser.Id]"><i class="fa fa-fw fa-user"></i> View Profile</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="javascript:;"><i class="fa fa-fw fa-envelope"></i> Inbox</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="javascript:;"><i class="fa fa-fw fa-gear"></i> Settings</a>
+                                <a class="dropdown-item"  [routerLink]="['users/edit', currentUser.Id]"><i class="fa fa-fw fa-edit"></i> Edit Profile</a>
                             </li>
                             <li class="divider"></li>
                             <li>
