Refactor Notifications and Project and User Profile Views

--- a/crowd-voice-front-end-project/src/client/app/dashboard/home/notifications.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/home/notifications.html
@@ -10,5 +10,7 @@
     </span>
   </div>
   <!-- /.list-group -->
-  <a href="#" class="btn btn-default btn-block"><i class="fa fa-list-alt"></i> All Completed Backed Projects</a>
+  <a href="#" class="btn btn-default btn-block">
+    <i class="fa fa-list-alt"></i> All Completed Backed Projects
+  </a>
 </div>
