--- a/crowd-voice-front-end-project/src/client/index.html
+++ b/crowd-voice-front-end-project/src/client/index.html
@@ -11,7 +11,24 @@
     <!-- endinject -->
 </head>
 <body>
-
+    <script>
+        window.fbAsyncInit = function() {
+            FB.init({
+                appId      : '584133128441376',
+                xfbml      : true,
+                version    : 'v2.8'
+            });
+            FB.AppEvents.logPageView();
+        };
+        
+        (function(d, s, id){
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) {return;}
+            js = d.createElement(s); js.id = id;
+            js.src = "//connect.facebook.net/en_US/sdk.js";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
     <sd-app>
         <div class="spinner">
             <div class="bounce1"></div>
