refactored all frontend views to wait for data to come from server before rendering the view - started viva wallet integration

--- a/crowd-voice-front-end-project/src/client/app/dashboard/home/notifications.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/home/notifications.html
@@ -1,4 +1,4 @@
-<div class="panel-body">
+<div *ngIf="projects" class="panel-body">
   <div class="list-group">
     <span *ngIf="projects">
       <a href="#" class="list-group-item" *ngFor="let project of projects">
