--- a/crowd-voice-front-end-project/src/client/app/shared/topnav/topnav.html
+++ b/crowd-voice-front-end-project/src/client/app/shared/topnav/topnav.html
@@ -1,32 +1,10 @@
 <nav class="navbar navbar-dark bg-inverse navbar-fixed-top topnav">
     <div class="collapse navbar-toggleable-xs clearfix text-center">
-        <a class="navbar-brand" [routerLink]="['/dashboard','home']"><i class="fa fa-users"></i> CrowdVoice</a>
+        <a class="navbar-brand" [routerLink]="['/dashboard/home']"><i class="fa fa-users"></i> CrowdVoice</a>
         
         <ul class="nav navbar-nav top-nav navbar-right pull-xs-right top-right-nav">
             <span [ngSwitch]="isLoggedIn">
                 <span *ngSwitchCase="true">
-                     <!--
-                    <li class="dropdown nav-item" dropdown> 
-                        <a href="javascript:;" id="name2" class="nav-link dropdown-toggle" dropdownToggle>
-                            <i class="fa fa-bell"></i> <b class="caret"></b><span class="sr-only">(current)</span>
-                        </a>
-                        <ul class="dropdown-menu alert-dropdown" aria-labelledby="name2">
-                            <li >
-                                <a href="javascript:;" class="dropdown-item">Alert Name <span class="label label-default"> Alert Badge</span></a>
-                            </li>
-                            <li >
-                                <a href="javascript:;" class="dropdown-item">Alert Name <span class="label label-default"> Alert Badge</span></a>
-                            </li>
-                            <li >
-                                <a href="javascript:;" class="dropdown-item">Alert Name <span class="label label-default"> Alert Badge</span></a>
-                            </li>
-                            <li class="dropdown-divider"></li>
-                            <li>
-                                <a href="javascript:;" class="dropdown-item">View All</a>
-                            </li>
-                        </ul>
-                    </li>
-                    -->
                     <li  class="dropdown nav-item" dropdown>
                         <a href="javascript:;" id="single-button" class="nav-link dropdown-toggle" dropdownToggle >
                             <i class="fa fa-user"></i> {{currentUser.Name}} ({{currentUser.Username}}) <b class="caret"></b>
