--- a/crowd-voice-front-end-project/src/client/app/shared/sidebar/sidebar.html
+++ b/crowd-voice-front-end-project/src/client/app/shared/sidebar/sidebar.html
@@ -3,47 +3,36 @@
 </button>
 <nav class="sidebar" [ngClass]="{sidebarPushRight: isActive}">
     <ul class="list-group">
-        <a routerLink="/dashboard/home" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-fw fa-dashboard"></i> Home
+        <a [routerLink]="['home']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+            <i class="fa fa-fw fa-home"></i> Home
         </a>
-        <a [routerLink]="['chart']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-fw fa-bar-chart-o"></i> All Projects
-        </a>
-        <a [routerLink]="['tables']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+        <a [routerLink]="['projects/trending']" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-fw fa-table"></i> Trending Projects
-        </a>
-        <a [routerLink]="['forms']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-fw fa-edit"></i> Search Projects
-        </a>
-        <a [routerLink]="['element']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-fw fa-desktop"></i> All Users
-        </a>
-        <a [routerLink]="['grid']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-fw fa-wrench"></i> Bootstrap Grid
-        </a>
-        <a [routerLink]="['components']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-th-list"></i> &nbsp;Component
         </a>
         <div class="nested-menu">
             <a class="list-group-item" (click)="addExpandClass('pages')">
-                <span><i class="fa fa-plus"></i> &nbsp; Menu</span>
+                <span><i class="fa fa-search"></i> &nbsp; Search</span>
             </a>
             <li class="nested" [ngClass]="{'expand' : showMenu === 'pages' }">
                 <ul class="submenu">
                     <li>
-                        <a href><span>Submenu</span></a>
+                        <a [routerLink]="['projects/search']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+                            Projects
+                        </a>
                     </li>
                     <li>
-                        <a href><span>Submenu</span></a>
+                        <a [routerLink]="['users/search']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+                            Users
+                        </a>
                     </li>
                 </ul>
             </li>
         </div>
-        <a [routerLink]="['blankpage']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-file-o"></i> &nbsp;BlankPage
+        <a [routerLink]="['projects/all']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+            <i class="fa fa-fw fa-list"></i> All Projects
         </a>
-        <a class="list-group-item more-themes" href="http://www.strapui.com/" >
-            More Themes
+        <a [routerLink]="['users/all']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+            <i class="fa fa-fw fa-list"></i> All Users
         </a>
     </ul>
 </nav>
