UI Evolution vol3
This image in the home screen is temporary.Just waitin for attachments

--- a/crowd-voice-front-end-project/src/client/app/shared/sidebar/sidebar.html
+++ b/crowd-voice-front-end-project/src/client/app/shared/sidebar/sidebar.html
@@ -7,7 +7,7 @@
             <i class="fa fa-fw fa-home"></i> Home
         </a>
         <a [routerLink]="['projects/trending']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-fw fa-table"></i> Trending Projects
+            <i class="fa fa-line-chart"></i> Trending Projects
         </a>
         <div class="nested-menu">
             <a class="list-group-item" (click)="addExpandClass('pages')">
