removed angular moment and used an angular date format(date:'medium')

--- a/crowd-voice-front-end-project/src/client/app/dashboard/home/chat.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/home/chat.html
@@ -24,7 +24,7 @@
                 </a>
               </strong>
               <small class="pull-right text-muted">
-                <i class="fa fa-clock-o fa-fw"></i> {{comment.WhenDateTime | amDateFormat:'LL'}}
+                <i class="fa fa-clock-o fa-fw"></i> {{comment.WhenDateTime | date:'medium'}}
               </small>
             </div>
             <p>
