Added Admin Panel to Top Navigation only if user is admin - Ready for deploy to Azure

--- a/crowd-voice-front-end-project/src/client/app/shared/topnav/topnav.html
+++ b/crowd-voice-front-end-project/src/client/app/shared/topnav/topnav.html
@@ -16,6 +16,9 @@
                             <li>
                                 <a class="dropdown-item"  [routerLink]="['users/edit', currentUser.Id]"><i class="fa fa-fw fa-edit"></i> Edit Profile</a>
                             </li>
+                            <li *ngIf="currentUser.IsAdmin">
+                                <a class="dropdown-item"  [routerLink]="['users/edit', currentUser.Id]"><i class="fa fa-fw fa-lock"></i> Admin Panel</a>
+                            </li>
                             <li class="divider"></li>
                             <li>
                                 <a class="dropdown-item" href="javascript:;" (click)="logOut()">
