--- a/crowd-voice-front-end-project/src/client/app/dashboard/home/notifications.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/home/notifications.html
@@ -2,7 +2,7 @@
   <div class="list-group">
     <span *ngIf="projects">
       <a href="#" [routerLink]="['/dashboard/projects/view', project.Id]" class="list-group-item" *ngFor="let project of projects">
-        <i class="fa fa-comment fa-fw"></i> {{project.Title}}
+        <i class="fa fa-tasks fa-fw"></i> {{project.Title}}
               <span class="pull-right text-muted small">
                 <em><i class="fa fa-clock-o"></i> {{project.UpdatedDate | date:'medium'}}</em>
               </span>
