--- a/crowd-voice-front-end-project/src/client/index.html
+++ b/crowd-voice-front-end-project/src/client/index.html
@@ -7,6 +7,8 @@
     <title><%= APP_TITLE %></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="style.css" media="screen" rel="stylesheet">
+    <link href="favicon.ico" rel="icon" type="image/x-icon">
     <!-- inject:css -->
     <!-- endinject -->
 </head>
@@ -29,6 +31,7 @@
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
     </script>
+    <div id="wrapper">
     <sd-app>
         <div class="spinner">
             <div class="bounce1"></div>
@@ -36,6 +39,7 @@
             <div class="bounce3"></div>
         </div>
     </sd-app>
+    </div>
 
     <script>
     // Fixes undefined module function in SystemJS bundle
