--- a/crowd-voice-front-end-project/src/client/app/shared/topnav/topnav.html
+++ b/crowd-voice-front-end-project/src/client/app/shared/topnav/topnav.html
@@ -4,7 +4,7 @@
     <a [routerLink]="['/dashboard/projects/create']">Create Project</a>
     </div>
     <div class="site-nav__middle">
-    <a class="navbar-brand" [routerLink]="['/dashboard/home']"><i class="fa fa-users"></i> CrowdVoice</a>
+    <a class="navbar-brand" [routerLink]="['/dashboard/home']"><img src="vivagr.png" alt="Viva CrowdVoice Project" /><span> CrowdVoice</span></a>
     </div>
     <div class="site-nav__right">
     <div class="collapse navbar-toggleable-xs clearfix text-center">
