--- a/crowd-voice-front-end-project/src/client/app/shared/sidebar/sidebar.html
+++ b/crowd-voice-front-end-project/src/client/app/shared/sidebar/sidebar.html
@@ -4,14 +4,14 @@
 <nav class="sidebar" [ngClass]="{sidebarPushRight: isActive}">
     <ul class="list-group">
         <a [routerLink]="['home']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-fw fa-home"></i> Home
+            <i class="fa fa-fw fa-home" aria-hidden="true"></i> Home
         </a>
         <a [routerLink]="['projects/trending']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-line-chart"></i> Trending Projects
+            <i class="fa fa-line-chart" aria-hidden="true"></i> Trending Projects
         </a>
         <div class="nested-menu">
             <a class="list-group-item" (click)="addExpandClass('pages')">
-                <span><i class="fa fa-search"></i> &nbsp; Search</span>
+                <span><i class="fa fa-search" aria-hidden="true"></i> &nbsp; Search</span>
             </a>
             <li class="nested" [ngClass]="{'expand' : showMenu === 'pages' }">
                 <ul class="submenu">
@@ -29,13 +29,13 @@
             </li>
         </div>
         <a [routerLink]="['projects/all']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-fw fa-list"></i> All Projects
+            <i class="fa fa-fw fa-list" aria-hidden="true"></i> All Projects
         </a>
         <a [routerLink]="['users/all']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-fw fa-list"></i> All Users
+            <i class="fa fa-fw fa-list" aria-hidden="true"></i> All Users
         </a>
         <a *ngIf="isUserLoggedIn" [routerLink]="['chat']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-comment"></i> Chat Application
+            <i class="fa fa-comment" aria-hidden="true"></i> Chat Application
         </a>
     </ul>
 </nav>
